config files updated

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "api_id": 2040,
-    "api_hash": "b18441a1ff607e10a989891a5462e627",
+    "api_id": 233546677,
+    "api_hash": "",
     "default_account_name": "NexoBot"
 }
