--- a/bot_config.json
+++ b/bot_config.json
@@ -1,9 +1,9 @@
 {
     "accounts": {
         "NexoBot": {
-            "api_id": 2040,
-            "api_hash": "b18441a1ff607e10a989891a5462e627",
-            "phone": "254710980516"
+            "api_id": 12347,
+            "api_hash": "",
+            "phone": ""
         }
     }
 }
